Fix hint layout overlap

--- a/006-hanzipad.css
+++ b/006-hanzipad.css
@@ -92,11 +92,19 @@
 {
 	margin-bottom: 0;
 }
+.HanziPadMinigame .padcontainer
+{
+	position: relative;
+	padding-top: 1.5em;
+}
 .HanziPadMinigame .current-hint
 {
 	font-weight: normal;
 	font-size: 32px;
-	margin-bottom: -1em;
+	line-height: 40px;
+	position: absolute;
+	top: 0;
+	text-align: center;
 }
 .HanziPadMinigame .current-hint span
 {
@@ -106,7 +114,7 @@
 	vertical-align: middle;
 	text-align: center;
 }
-.HanziPadMinigame .current-hint .past    { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='40'><circle cx='16' cy='20' r='7' fill='%2387D831'/></svg>"); }
-.HanziPadMinigame .current-hint .present { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='40'><circle cx='16' cy='20' r='7' fill='%23FFFDB3'/></svg>"); }
-.HanziPadMinigame .current-hint .future  { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='40'><circle cx='16' cy='20' r='7' fill='%23C2CDB4'/></svg>"); }
+.HanziPadMinigame .current-hint .past    { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><circle cx='20' cy='20' r='7' fill='%2375C025'/></svg>"); }
+.HanziPadMinigame .current-hint .present { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><circle cx='20' cy='20' r='7' fill='%23ECDB5C'/></svg>"); }
+.HanziPadMinigame .current-hint .future  { background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40'><circle cx='20' cy='20' r='7' fill='%23A2BA84'/></svg>"); }
 
